# bracketcounter-datastuff

./: .gitignore  README.md  allvoters.py  config.example.py  csv.py  data-alleps.py  data.py  datafile.py  datatool.py  datav2.py  flake.nix  json2msgp.py  processor.py  pyproject.toml  requirements.txt  sankey.py
