[tool.poetry]
name = "datastuff"
version = "0.1.0"
description = "Bracketcounter data tools"
authors = ["George Brooke <figgyc@figgyc.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
mpld3 = "^0.5.2"
numpy = "^1.20.1"
orjson = "^3.5.1"
msgpack = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
