[tool.poetry]
name = "datastuff"
version = "0.1.0"
description = "Bracketcounter data tools"
authors = ["George Brooke <figgyc@figgyc.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.4"
mpld3 = "^0.5.2"
numpy = "^1.20.1"
msgpack = "^1.0.2"
certifi = "^2020.12.5"
colour = "^0.1.5"

[tool.poetry.dev-dependencies]
certifi = "^2020.12.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
